syntax = 'proto3';

package lexmodo.v1.settings;

option go_package = "bitbucket.org/lexmodo/proto/settings";

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "money.proto";
import "google/protobuf/empty.proto";
import "address.proto";



service Settings{

    rpc SetAnalyticsSettings(SettingsRequest) returns (ResultResponse) {
        option (google.api.http) = {
            get: "/SetAnalytics"
            
        };
    }

    rpc GetAnalyticsAccessToken(SettingsRequest) returns (ResultResponse) {
        option (google.api.http) = {
            get: "/GetAnalyticsAccessToken"
          
        };
    }
    rpc GetAnalyticsSettings(SettingsRequest) returns (ResultResponse) {
        option (google.api.http) = {
            post: "/GetAnalytics",
            body: "*"
        };
    }

    rpc GetCheckoutSettings (google.protobuf.Empty) returns (ResultResponse) {
        option (google.api.http) = {
            get: "/GetCheckoutSettings"
        };
    }

    rpc SetCheckoutSettings (SettingsRequest) returns (ResultResponse) {
        option (google.api.http) = {
            post: "/SetCheckoutSettings",
             body: "*"
        };
    }


    rpc GetLegalSettings (google.protobuf.Empty) returns (ResultResponse) {
        option (google.api.http) = {
            get: "/GetLegalSettings"
        };
    }

    rpc SetLegalSettings (SettingsRequest) returns (ResultResponse) {
        option (google.api.http) = {
            post: "/SetLegalSettings",
            body: "*"
        };
    }

    rpc GetStoreWebsite(google.protobuf.Empty) returns (ResultResponse){

    }

    rpc GetStoreSettings (google.protobuf.Empty) returns (ResultResponse) {
        option (google.api.http) = {
            get: "/GetStoreSettings"
        };
    }

    rpc SetStoreSettings (SettingsRequest) returns (ResultResponse) {
        option (google.api.http) = {
            post: "/SetStoreSettings",
            body: "*"
        };
    }

    rpc SetRedirect(RedirectRequest) returns (ResultResponse) {
    }

    rpc GetRedirects(RedirectListing) returns (ResultResponse) {
    }

    rpc BlockIP(BlockedIPRequest) returns (ResultResponse) {
    }

    rpc DeleteBlockIP(BlockedIPRequest) returns (ResultResponse) {
    }

    rpc GetBlockedIP(BlockedIPListing) returns (ResultResponse) {
        
    }
}


message BlockedIPRequest {
    string ip_address =1;
    google.protobuf.StringValue blocked_reason = 2;
    uint32 blocked_on = 3;
}

message BlockedIPListing{
    uint32 page_num = 1;
    uint32 total_result = 2;
    uint32 display_result = 3;
    repeated BlockedIPRequest blocked_ips =4;


}

message RedirectListing{
    uint32 page_num = 1;
    uint32 total_result = 2;
    uint32 display_result = 3;
    repeated RedirectRequest redirect_requests =4;


}
message RedirectRequest{

    enum ACTION_TYPE {
        unknown =0;
        create =1;
        update = 2;
        delete = 3; 
    }

    ACTION_TYPE  action_type=1;

    string from_url =2;

    string to_url =3;

    bool redirect_status =4;

    uint32 last_saved =5;

    uint32 created_at =6;

    bool allow_partial_match = 7;
}

message General {

    StoreDetails store_details = 1;
    lexmodo.v1.address.Address store_address = 2;
    StandardFormats store_standard_formats = 3;
    StoreCurrency store_currency = 4;
    uint32 last_saved = 5;
    
    
}


message StoreDetails {
    google.protobuf.StringValue store_name = 1;
    google.protobuf.StringValue store_email = 2;
    StoreIndustry store_industry = 3;
    string store_website =4;
    string store_logo = 5;
}

enum StoreIndustry {
    OTHER = 0;
    BEAUTY = 1;
    CLOTHING = 2;
    ELECTRONICS = 3;
    FURNITURE = 4;
    GROCERIES = 5;
    HANDCRAFTS = 6;
    JEWELRY = 7;
    OTHER_FOOD_DRINK = 8;
    PAINTING = 9;
    PHOTOGRAPHY = 10;
    RESTAURANTS = 11;
    SERVICES = 12;
    SPORTS = 13;
    TOYS = 14;
    VIRTUAL_SERVICES = 15;
}

message StandardFormats {
    Timezone timezone = 1;
    google.protobuf.StringValue order_prefix = 2;
    google.protobuf.StringValue order_suffix = 3;
}


message Google{
    string website_id =1;
    string code = 2;
    string access_token = 3;
    string auth_url = 4;
    string state =5;
    string property_id = 6;
}

message Analytics {

    Google google_analytics =1;

}
message StoreCurrency {
    lexmodo.v1.money.Currency currency = 1;
    google.protobuf.StringValue html_with_currency = 2;
    google.protobuf.StringValue html_without_currency = 3;
    google.protobuf.StringValue email_with_currency = 4;
    google.protobuf.StringValue email_without_currency = 5;
}

message Legal {
    google.protobuf.StringValue refund_policy = 1;
    google.protobuf.StringValue privacy_policy = 2;
    google.protobuf.StringValue terms_of_service = 3;
    google.protobuf.StringValue shipping_policy = 4;
    uint32 last_saved = 5;
}

message Checkout {
    CustomerAccounts customer_accounts = 1;
    FormOptions form_options = 2;
    bool tipping = 3;
    OrderProcessing order_processing = 4;
    bool email_subscription = 5;
    AbandonedCheckout abandoned_checkout = 6;
    uint32 last_saved = 7;
    CheckoutStyles checkout_styles =  8;
}
message CheckoutStyles {
  google.protobuf.StringValue store_logo_url  = 1 ;
  google.protobuf.StringValue primary_color  =  2 ; 
  google.protobuf.StringValue secondary_color  = 3 ;
  google.protobuf.StringValue footer_background_color    = 4 ; 
  google.protobuf.StringValue header_background_color  = 5 ;
  google.protobuf.StringValue success_message_store_logo_url  = 6 ;
  google.protobuf.StringValue success_message  = 7 ;
}

message FormOptions{
    FullNameOption full_name_field = 1;
    FieldOption company_name = 2;
    FieldOption address_line2 = 3;
    FieldOption shipping_address_phone = 4;
}

enum CustomerAccounts{
    ACCOUNTS_DISABLED = 0;
    ACCOUNTS_OPTIONAL = 1;
    ACCOUNTS_REQUIRED = 2;
}

enum FullNameOption{
    REQUIRED_LAST = 0;
    REQUIRED_FIRST_AND_LAST = 1;
}

enum FieldOption{
    FIELD_HIDDEN = 0;
    FIELD_OPTIONAL = 1;
    FIELD_REQUIRED = 2;
}

message OrderProcessing{
    bool shipping_as_billing_default = 1;
    bool address_completion = 2;
    AutoFulfillOption auto_fulfill = 3;
    bool auto_archive = 4;
}

enum AutoFulfillOption{
    AUTO_FULFILL_LINE_ITEMS = 0;
    AUTO_FULFILL_GIFT_CARDS = 1;
    NOT_AUTO_FULFILL = 2;
}

message AbandonedCheckout{
    bool automatically_send_emails = 1;
    AbandonedEmailsTo send_to = 2;
    uint32 send_after = 3; 
}

enum AbandonedEmailsTo{
    EMAIL_ANYONE = 0;
    EMAIL_SUBSCRIBERS = 1;
}

message ResultResponse{
    bool success = 1;
    bool failure = 2;
    string code = 3;
    string message = 4;
    General general_settings = 5;
    Legal legal_settings = 6;
    Checkout checkout_settings = 7;
    Analytics analytics_settings =8;
    RedirectListing redirect_listing =9;
    BlockedIPListing blocked_ip_listing = 10;


}

message SettingsRequest{
    General general_settings = 1;
    Legal legal_settings = 2;
    Checkout checkout_settings = 3;
    Analytics analytics_settings =6; 
}





enum Timezone {
    ETC_GMT_12 = 0; 
    ETC_GMT_11 = 1; 
    PACIFIC_MIDWAY = 2; 
    PACIFIC_NIUE = 3; 
    PACIFIC_PAGO_PAGO = 4; 
    ETC_GMT_10 = 5; 
    PACIFIC_HONOLULU = 6; 
    PACIFIC_JOHNSTON = 7; 
    PACIFIC_RAROTONGA = 8; 
    PACIFIC_TAHITI = 9; 
    AMERICA_ANCHORAGE = 10; 
    AMERICA_JUNEAU = 11; 
    AMERICA_NOME = 12; 
    AMERICA_SITKA = 13; 
    AMERICA_YAKUTAT = 14; 
    AMERICA_SANTA_ISABEL = 15; 
    AMERICA_LOS_ANGELES = 16; 
    AMERICA_TIJUANA = 17; 
    AMERICA_VANCOUVER = 18; 
    PST8PDT = 19; 
    AMERICA_CRESTON = 20; 
    AMERICA_DAWSON = 21; 
    AMERICA_DAWSON_CREEK = 22; 
    AMERICA_HERMOSILLO = 23; 
    AMERICA_PHOENIX = 24; 
    AMERICA_WHITEHORSE = 25; 
    ETC_GMT_7 = 26; 
    AMERICA_CHIHUAHUA = 27; 
    AMERICA_MAZATLAN = 28; 
    AMERICA_BOISE = 29; 
    AMERICA_CAMBRIDGE_BAY = 30; 
    AMERICA_DENVER = 31; 
    AMERICA_EDMONTON = 32; 
    AMERICA_INUVIK = 33; 
    AMERICA_OJINAGA = 34; 
    AMERICA_YELLOWKNIFE = 35; 
    MST7MDT = 36; 
    AMERICA_BELIZE = 37; 
    AMERICA_COSTA_RICA = 38; 
    AMERICA_EL_SALVADOR = 39; 
    AMERICA_GUATEMALA = 40; 
    AMERICA_MANAGUA = 41; 
    AMERICA_TEGUCIGALPA = 42; 
    ETC_GMT_6 = 43; 
    PACIFIC_GALAPAGOS = 44; 
    AMERICA_CHICAGO = 45; 
    AMERICA_INDIANA_KNOX = 46; 
    AMERICA_INDIANA_TELL_CITY = 47; 
    AMERICA_MATAMOROS = 48; 
    AMERICA_MENOMINEE = 49; 
    AMERICA_NORTH_DAKOTA_BEULAH = 50; 
    AMERICA_NORTH_DAKOTA_CENTER = 51; 
    AMERICA_NORTH_DAKOTA_NEW_SALEM = 52; 
    AMERICA_RAINY_RIVER = 53; 
    AMERICA_RANKIN_INLET = 54; 
    AMERICA_RESOLUTE = 55; 
    AMERICA_WINNIPEG = 56; 
    CST6CDT = 57; 
    AMERICA_BAHIA_BANDERAS = 58; 
    AMERICA_CANCUN = 59; 
    AMERICA_MERIDA = 60; 
    AMERICA_MEXICO_CITY = 61; 
    AMERICA_MONTERREY = 62; 
    AMERICA_REGINA = 63; 
    AMERICA_SWIFT_CURRENT = 64; 
    AMERICA_BOGOTA = 65; 
    AMERICA_CAYMAN = 66; 
    AMERICA_CORAL_HARBOUR = 67; 
    AMERICA_EIRUNEPE = 68; 
    AMERICA_GUAYAQUIL = 69; 
    AMERICA_JAMAICA = 70; 
    AMERICA_LIMA = 71; 
    AMERICA_PANAMA = 72; 
    AMERICA_RIO_BRANCO = 73; 
    ETC_GMT_5 = 74; 
    AMERICA_DETROIT = 75; 
    AMERICA_HAVANA = 76; 
    AMERICA_INDIANA_PETERSBURG = 77; 
    AMERICA_INDIANA_VINCENNES = 78; 
    AMERICA_INDIANA_WINAMAC = 79; 
    AMERICA_IQALUIT = 80; 
    AMERICA_KENTUCKY_MONTICELLO = 81; 
    AMERICA_LOUISVILLE = 82; 
    AMERICA_MONTREAL = 83; 
    AMERICA_NASSAU = 84; 
    AMERICA_NEW_YORK = 85; 
    AMERICA_NIPIGON = 86; 
    AMERICA_PANGNIRTUNG = 87; 
    AMERICA_PORT_AU_PRINCE = 88; 
    AMERICA_THUNDER_BAY = 89; 
    AMERICA_TORONTO = 90; 
    AMERICA_INDIANA_MARENGO = 91; 
    AMERICA_INDIANA_VEVAY = 92; 
    AMERICA_INDIANAPOLIS = 93; 
    AMERICA_CARACAS = 94; 
    AMERICA_ASUNCION = 95; 
    AMERICA_GLACE_BAY = 96; 
    AMERICA_GOOSE_BAY = 97; 
    AMERICA_HALIFAX = 98; 
    AMERICA_MONCTON = 99; 
    AMERICA_THULE = 100; 
    ATLANTIC_BERMUDA = 101; 
    AMERICA_CAMPO_GRANDE = 102; 
    AMERICA_CUIABA = 103; 
    AMERICA_ANGUILLA = 104; 
    AMERICA_ANTIGUA = 105; 
    AMERICA_ARUBA = 106; 
    AMERICA_BARBADOS = 107; 
    AMERICA_BLANC_SABLON = 108; 
    AMERICA_BOA_VISTA = 109; 
    AMERICA_CURACAO = 110; 
    AMERICA_DOMINICA = 111; 
    AMERICA_GRAND_TURK = 112; 
    AMERICA_GRENADA = 113; 
    AMERICA_GUADELOUPE = 114; 
    AMERICA_GUYANA = 115; 
    AMERICA_KRALENDIJK = 116; 
    AMERICA_LA_PAZ = 117; 
    AMERICA_LOWER_PRINCES = 118; 
    AMERICA_MANAUS = 119; 
    AMERICA_MARIGOT = 120; 
    AMERICA_MARTINIQUE = 121; 
    AMERICA_MONTSERRAT = 122; 
    AMERICA_PORT_OF_SPAIN = 123; 
    AMERICA_PORTO_VELHO = 124; 
    AMERICA_PUERTO_RICO = 125; 
    AMERICA_SANTO_DOMINGO = 126; 
    AMERICA_ST_BARTHELEMY = 127; 
    AMERICA_ST_KITTS = 128; 
    AMERICA_ST_LUCIA = 129; 
    AMERICA_ST_THOMAS = 130; 
    AMERICA_ST_VINCENT = 131; 
    AMERICA_TORTOLA = 132; 
    ETC_GMT_4 = 133; 
    AMERICA_SANTIAGO = 134; 
    ANTARCTICA_PALMER = 135; 
    AMERICA_ST_JOHNS = 136; 
    AMERICA_SAO_PAULO = 137; 
    AMERICA_ARGENTINA_LA_RIOJA = 138; 
    AMERICA_ARGENTINA_RIO_GALLEGOS = 139; 
    AMERICA_ARGENTINA_SALTA = 140; 
    AMERICA_ARGENTINA_SAN_JUAN = 141; 
    AMERICA_ARGENTINA_SAN_LUIS = 142; 
    AMERICA_ARGENTINA_TUCUMAN = 143; 
    AMERICA_ARGENTINA_USHUAIA = 144; 
    AMERICA_BUENOS_AIRES = 145; 
    AMERICA_CATAMARCA = 146; 
    AMERICA_CORDOBA = 147; 
    AMERICA_JUJUY = 148; 
    AMERICA_MENDOZA = 149; 
    AMERICA_ARAGUAINA = 150; 
    AMERICA_BELEM = 151; 
    AMERICA_CAYENNE = 152; 
    AMERICA_FORTALEZA = 153; 
    AMERICA_MACEIO = 154; 
    AMERICA_PARAMARIBO = 155; 
    AMERICA_RECIFE = 156; 
    AMERICA_SANTAREM = 157; 
    ANTARCTICA_ROTHERA = 158; 
    ATLANTIC_STANLEY = 159; 
    ETC_GMT_3 = 160; 
    AMERICA_GODTHAB = 161; 
    AMERICA_MONTEVIDEO = 162; 
    AMERICA_BAHIA = 163; 
    AMERICA_NORONHA = 164; 
    ATLANTIC_SOUTH_GEORGIA = 165; 
    ETC_GMT_2 = 166; 
    AMERICA_SCORESBYSUND = 167; 
    ATLANTIC_AZORES = 168; 
    ATLANTIC_CAPE_VERDE = 169; 
    ETC_GMT_1 = 170; 
    AFRICA_CASABLANCA = 171; 
    AFRICA_EL_AAIUN = 172; 
    AMERICA_DANMARKSHAVN = 173; 
    ETC_GMT = 174; 
    EUROPE_ISLE_OF_MAN = 175; 
    EUROPE_GUERNSEY = 176; 
    EUROPE_JERSEY = 177; 
    EUROPE_LONDON = 178; 
    ATLANTIC_CANARY = 179; 
    ATLANTIC_FAEROE = 180; 
    ATLANTIC_MADEIRA = 181; 
    EUROPE_DUBLIN = 182; 
    EUROPE_LISBON = 183; 
    AFRICA_ABIDJAN = 184; 
    AFRICA_ACCRA = 185; 
    AFRICA_BAMAKO = 186; 
    AFRICA_BANJUL = 187; 
    AFRICA_BISSAU = 188; 
    AFRICA_CONAKRY = 189; 
    AFRICA_DAKAR = 190; 
    AFRICA_FREETOWN = 191; 
    AFRICA_LOME = 192; 
    AFRICA_MONROVIA = 193; 
    AFRICA_NOUAKCHOTT = 194; 
    AFRICA_OUAGADOUGOU = 195; 
    AFRICA_SAO_TOME = 196; 
    ATLANTIC_REYKJAVIK = 197; 
    ATLANTIC_ST_HELENA = 198; 
    ARCTIC_LONGYEARBYEN = 199; 
    EUROPE_AMSTERDAM = 200; 
    EUROPE_ANDORRA = 201; 
    EUROPE_BERLIN = 202; 
    EUROPE_BUSINGEN = 203; 
    EUROPE_GIBRALTAR = 204; 
    EUROPE_LUXEMBOURG = 205; 
    EUROPE_MALTA = 206; 
    EUROPE_MONACO = 207; 
    EUROPE_OSLO = 208; 
    EUROPE_ROME = 209; 
    EUROPE_SAN_MARINO = 210; 
    EUROPE_STOCKHOLM = 211; 
    EUROPE_VADUZ = 212; 
    EUROPE_VATICAN = 213; 
    EUROPE_VIENNA = 214; 
    EUROPE_ZURICH = 215; 
    EUROPE_BELGRADE = 216; 
    EUROPE_BRATISLAVA = 217; 
    EUROPE_BUDAPEST = 218; 
    EUROPE_LJUBLJANA = 219; 
    EUROPE_PODGORICA = 220; 
    EUROPE_PRAGUE = 221; 
    EUROPE_TIRANE = 222; 
    AFRICA_CEUTA = 223; 
    EUROPE_BRUSSELS = 224; 
    EUROPE_COPENHAGEN = 225; 
    EUROPE_MADRID = 226; 
    EUROPE_PARIS = 227; 
    EUROPE_SARAJEVO = 228; 
    EUROPE_SKOPJE = 229; 
    EUROPE_WARSAW = 230; 
    EUROPE_ZAGREB = 231; 
    AFRICA_ALGIERS = 232; 
    AFRICA_BANGUI = 233; 
    AFRICA_BRAZZAVILLE = 234; 
    AFRICA_DOUALA = 235; 
    AFRICA_KINSHASA = 236; 
    AFRICA_LAGOS = 237; 
    AFRICA_LIBREVILLE = 238; 
    AFRICA_LUANDA = 239; 
    AFRICA_MALABO = 240; 
    AFRICA_NDJAMENA = 241; 
    AFRICA_NIAMEY = 242; 
    AFRICA_PORTO_NOVO = 243; 
    AFRICA_TUNIS = 244; 
    AFRICA_WINDHOEK = 245; 
    ASIA_NICOSIA = 246; 
    EUROPE_ATHENS = 247; 
    EUROPE_BUCHAREST = 248; 
    EUROPE_CHISINAU = 249; 
    ASIA_BEIRUT = 250; 
    AFRICA_CAIRO = 251; 
    ASIA_DAMASCUS = 252; 
    EUROPE_HELSINKI = 253; 
    EUROPE_KIEV = 254; 
    EUROPE_MARIEHAMN = 255; 
    EUROPE_NICOSIA = 256; 
    EUROPE_RIGA = 257; 
    EUROPE_SOFIA = 258; 
    EUROPE_TALLINN = 259; 
    EUROPE_UZHGOROD = 260; 
    EUROPE_VILNIUS = 261; 
    EUROPE_ZAPOROZHYE = 262; 
    AFRICA_BLANTYRE = 263; 
    AFRICA_BUJUMBURA = 264; 
    AFRICA_GABORONE = 265; 
    AFRICA_HARARE = 266; 
    AFRICA_JOHANNESBURG = 267; 
    AFRICA_KIGALI = 268; 
    AFRICA_LUBUMBASHI = 269; 
    AFRICA_LUSAKA = 270; 
    AFRICA_MAPUTO = 271; 
    AFRICA_MASERU = 272; 
    AFRICA_MBABANE = 273; 
    EUROPE_ISTANBUL = 274; 
    ASIA_JERUSALEM = 275; 
    AFRICA_TRIPOLI = 276; 
    ASIA_AMMAN = 277; 
    ASIA_BAGHDAD = 278; 
    EUROPE_KALININGRAD = 279; 
    ASIA_ADEN = 280; 
    ASIA_BAHRAIN = 281; 
    ASIA_KUWAIT = 282; 
    ASIA_QATAR = 283; 
    ASIA_RIYADH = 284; 
    AFRICA_ADDIS_ABABA = 285; 
    AFRICA_ASMERA = 286; 
    AFRICA_DAR_ES_SALAAM = 287; 
    AFRICA_DJIBOUTI = 288; 
    AFRICA_JUBA = 289; 
    AFRICA_KAMPALA = 290; 
    AFRICA_KHARTOUM = 291; 
    AFRICA_MOGADISHU = 292; 
    AFRICA_NAIROBI = 293; 
    ANTARCTICA_SYOWA = 294; 
    INDIAN_ANTANANARIVO = 295; 
    INDIAN_COMORO = 296; 
    INDIAN_MAYOTTE = 297; 
    EUROPE_KIROV = 298; 
    EUROPE_MOSCOW = 299; 
    EUROPE_SIMFEROPOL = 300; 
    EUROPE_VOLGOGRAD = 301; 
    EUROPE_MINSK = 302; 
    EUROPE_ASTRAKHAN = 303; 
    EUROPE_SAMARA = 304; 
    EUROPE_ULYANOVSK = 305; 
    ASIA_TEHRAN = 306; 
    ASIA_DUBAI = 307; 
    ASIA_MUSCAT = 308; 
    ASIA_BAKU = 309; 
    INDIAN_MAHE = 310; 
    INDIAN_MAURITIUS = 311; 
    INDIAN_REUNION = 312; 
    ASIA_TBILISI = 313; 
    ASIA_YEREVAN = 314; 
    ASIA_KABUL = 315; 
    ANTARCTICA_MAWSON = 316; 
    ASIA_AQTAU = 317; 
    ASIA_AQTOBE = 318; 
    ASIA_ASHGABAT = 319; 
    ASIA_DUSHANBE = 320; 
    ASIA_ORAL = 321; 
    ASIA_SAMARKAND = 322; 
    ASIA_TASHKENT = 323; 
    INDIAN_KERGUELEN = 324; 
    INDIAN_MALDIVES = 325; 
    ASIA_YEKATERINBURG = 326; 
    ASIA_KARACHI = 327; 
    ASIA_KOLKATA = 328; 
    ASIA_CALCUTTA = 329; 
    ASIA_COLOMBO = 330; 
    ASIA_KATHMANDU = 331; 
    ANTARCTICA_VOSTOK = 332; 
    ASIA_ALMATY = 333; 
    ASIA_BISHKEK = 334; 
    ASIA_QYZYLORDA = 335; 
    ASIA_URUMQI = 336; 
    INDIAN_CHAGOS = 337; 
    ASIA_DHAKA = 338; 
    ASIA_THIMPHU = 339; 
    ASIA_RANGOON = 340; 
    INDIAN_COCOS = 341; 
    ANTARCTICA_DAVIS = 342; 
    ASIA_BANGKOK = 343; 
    ASIA_HOVD = 344; 
    ASIA_JAKARTA = 345; 
    ASIA_PHNOM_PENH = 346; 
    ASIA_PONTIANAK = 347; 
    ASIA_SAIGON = 348; 
    ASIA_VIENTIANE = 349; 
    INDIAN_CHRISTMAS = 350; 
    ASIA_NOVOKUZNETSK = 351; 
    ASIA_NOVOSIBIRSK = 352; 
    ASIA_OMSK = 353; 
    ASIA_HONG_KONG = 354; 
    ASIA_MACAU = 355; 
    ASIA_SHANGHAI = 356; 
    ASIA_KRASNOYARSK = 357; 
    ASIA_BRUNEI = 358; 
    ASIA_KUALA_LUMPUR = 359; 
    ASIA_KUCHING = 360; 
    ASIA_MAKASSAR = 361; 
    ASIA_MANILA = 362; 
    ASIA_SINGAPORE = 363; 
    ETC_GMT_8 = 364; 
    ANTARCTICA_CASEY = 365; 
    AUSTRALIA_PERTH = 366; 
    ASIA_TAIPEI = 367; 
    ASIA_CHOIBALSAN = 368; 
    ASIA_ULAANBAATAR = 369; 
    ASIA_IRKUTSK = 370; 
    ASIA_DILI = 371; 
    ASIA_JAYAPURA = 372; 
    ASIA_TOKYO = 373; 
    ETC_GMT_9 = 374; 
    PACIFIC_PALAU = 375; 
    ASIA_PYONGYANG = 376; 
    ASIA_SEOUL = 377; 
    AUSTRALIA_ADELAIDE = 378; 
    AUSTRALIA_BROKEN_HILL = 379; 
    AUSTRALIA_DARWIN = 380; 
    AUSTRALIA_BRISBANE = 381; 
    AUSTRALIA_LINDEMAN = 382; 
    AUSTRALIA_MELBOURNE = 383; 
    AUSTRALIA_SYDNEY = 384; 
    ANTARCTICA_DUMONTDURVILLE = 385; 
    PACIFIC_GUAM = 386; 
    PACIFIC_PORT_MORESBY = 387; 
    PACIFIC_SAIPAN = 388; 
    PACIFIC_TRUK = 389; 
    AUSTRALIA_CURRIE = 390; 
    AUSTRALIA_HOBART = 391; 
    ASIA_CHITA = 392; 
    ASIA_KHANDYGA = 393; 
    ASIA_YAKUTSK = 394; 
    ANTARCTICA_MACQUARIE = 395; 
    PACIFIC_EFATE = 396; 
    PACIFIC_GUADALCANAL = 397; 
    PACIFIC_KOSRAE = 398; 
    PACIFIC_NOUMEA = 399; 
    PACIFIC_PONAPE = 400; 
    ASIA_SAKHALIN = 401; 
    ASIA_UST_NERA = 402; 
    ASIA_VLADIVOSTOK = 403; 
    ANTARCTICA_MCMURDO = 404; 
    PACIFIC_AUCKLAND = 405; 
    PACIFIC_FUNAFUTI = 406; 
    PACIFIC_KWAJALEIN = 407; 
    PACIFIC_MAJURO = 408; 
    PACIFIC_NAURU = 409; 
    PACIFIC_TARAWA = 410; 
    PACIFIC_WAKE = 411; 
    PACIFIC_WALLIS = 412; 
    PACIFIC_FIJI = 413; 
    ASIA_ANADYR = 414; 
    ASIA_KAMCHATKA = 415; 
    ASIA_MAGADAN = 416; 
    ASIA_SREDNEKOLYMSK = 417; 
    ETC_GMT_13 = 418; 
    PACIFIC_ENDERBURY = 419; 
    PACIFIC_FAKAOFO = 420; 
    PACIFIC_TONGATAPU = 421; 
    PACIFIC_APIA = 422; 

}